--- a/Project 1(Variable Illustration)/index.html
+++ b/Project 1(Variable Illustration)/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section class="cards">
+        <div class="card">
+            <div class="image image1"></div>
+            <h1>Name</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Autem voluptate consectetur quas deserunt quaerat eum!</p>
+        </div>
+    </section>
 </body>
 </html>
