--- a/Project 1(Variable Illustration)/index.html
+++ b/Project 1(Variable Illustration)/index.html
@@ -12,7 +12,25 @@
             <div class="image image1"></div>
             <h1>Name</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Autem voluptate consectetur quas deserunt quaerat eum!</p>
+               Autem voluptate consectetur quas deserunt quaerat eum!</p>
+        </div>
+        <div class="card">
+            <div class="image image1"></div>
+            <h1>Name</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Autem voluptate consectetur quas deserunt quaerat eum!</p>
+        </div>
+        <div class="card">
+            <div class="image image1"></div>
+            <h1>Name</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Autem voluptate consectetur quas deserunt quaerat eum!</p>
+        </div>
+        <div class="card">
+            <div class="image image1"></div>
+            <h1>Name</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Autem voluptate consectetur quas deserunt quaerat eum!</p>
         </div>
     </section>
 </body>
