--- a/Project 2(Nested Illustration)/index.html
+++ b/Project 2(Nested Illustration)/index.html
@@ -12,7 +12,7 @@
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
             <li><a href="">CONTACT</a></li>
-            <li><a href="">CONNECT</a></li>
+            <li><a href="">ADDRESS</a></li>
         </ul>
     </section>
 </body>
