--- a/Project 3(Paricles Illustration)/index.html
+++ b/Project 3(Paricles Illustration)/index.html
@@ -36,7 +36,7 @@
                  vitae cupiditate magnam dolores totam, odio deserunt enim autem saepe laboriosam, 
                 molestias corporis. Atque dolores et quas tenetur labore expedita?</p>
         </div>
-        <img src="" alt="" class="img">
+        <img src="https://images.unsplash.com/photo-1647891940243-77a6483a152e?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="ci1" class="img">
     </div>
     <div class="c2">
         <div class="w">
@@ -45,21 +45,25 @@
                  vitae cupiditate magnam dolores totam, odio deserunt enim autem saepe laboriosam, 
                 molestias corporis. Atque dolores et quas tenetur labore expedita?</p>
         </div>
-        <img src="" alt="" class="img">
+        <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="ci2" class="img">
     </div>
     </section>
     <!--section ends-->
     <!--gallery starts-->
     <section class="gallery">
-        <img src="" alt="" class="ig">
-        <img src="" alt="" class="ig">
-        <img src="" alt="" class="ig">
-        <img src="" alt="" class="ig">
-        <img src="" alt="" class="ig">
+        <h1>Our Gallery Section</h1>
+        <div class="cont">
+        <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?q=80&w=1948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="gi1" class="ig">
+        <img src="https://images.unsplash.com/photo-1433086966358-54859d0ed716?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="gi2" class="ig">
+        <img src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="gi3" class="ig">
+        <img src="https://images.unsplash.com/photo-1496347646636-ea47f7d6b37b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="gi4" class="ig">
+        <img src="https://images.unsplash.com/photo-1431794062232-2a99a5431c6c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="gi5" class="ig">
+    </div>
     </section>
     <!--gallery ends-->
     <!--footer stars-->
     <footer>
+        <h1>Connect With Us</h1>
         <form>
             <input type="text" placeholder="Name">
             <input type="email" placeholder="Email"><br>
