--- a/Project 4(Mixin Illustration)/index.html
+++ b/Project 4(Mixin Illustration)/index.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mixin</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="cards">
-        <div class="card1">
-            <h1>₹999.<span>50</span></h1>
+        <div class="card card1">
+            <h1 class="p">₹999.<span>50</span></h1>
             <div class="writings">
                 <h1 class="name">Basic</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Sit accusamus ipsa tenetur at cumque qui.</p>
+                    <button>Choose</button>
             </div>   
         </div>
-        <div class="card2">
-            <h1>₹999.<span>50</span></h1>
+        <div class="card card2">
+            <h1 class="p">₹999.<span>50</span></h1>
             <div class="writings">
                 <h1 class="name">Standard</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Sit accusamus ipsa tenetur at cumque qui.</p>
+                    <button>Choose</button>
             </div>   
         </div>
-        <div class="card3">
-            <h1>₹999.<span>50</span></h1>
+        <div class="card card3">
+            <h1 class="p">₹999.<span>50</span></h1>
             <div class="writings">
                 <h1 class="name">Premium</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Sit accusamus ipsa tenetur at cumque qui.</p>
+                    <button>Choose</button>
             </div>   
         </div>
     </section>
