--- a/Project 5(Extend Illustration)/index.html
+++ b/Project 5(Extend Illustration)/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="w">
             <h1>Our Menu</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nostrum voluptate,
                  ipsum expedita officia autem illo possimus unde aperiam voluptatibus libero iure
                   harum ! Voluptates dolorum commodi harum consectetur totam voluptatibus.</p>
-        </div>
     </header>
     <section>
         <div class="cartmaon">
@@ -21,37 +19,37 @@
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium aut, iure quaerat et recusandae fugit.</p>
+                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
             </div>
             <div class="card2">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium aut, iure quaerat et recusandae fugit.</p>
+                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
             </div>
             <div class="card3">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium aut, iure quaerat et recusandae fugit.</p>
+                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
             </div>
             <div class="card4">
                 <h1>Breakfast Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium aut, iure quaerat et recusandae fugit.</p>
+                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
             </div>
             <div class="card5">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium aut, iure quaerat et recusandae fugit.</p>
+                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
             </div>
             <div class="card6">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium aut, iure quaerat et recusandae fugit.</p>
+                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
             </div>
         </div>
     </section>
