--- a/Project 5(Extend Illustration)/index.html
+++ b/Project 5(Extend Illustration)/index.html
@@ -20,36 +20,32 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
-            </div>
+                <button>Learn more</button>
+                <button>Check out</button>
+                    </div>
             <div class="card2">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
+                     <button>Learn more</button>
+                <button>Check out</button>
             </div>
             <div class="card3">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
+                     <button>Learn more</button>
+                <button>Check out</button>
             </div>
             <div class="card4">
                 <h1>Breakfast Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
-            </div>
-            <div class="card5">
-                <h1>Lunch Menu</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                     Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
-            </div>
-            <div class="card6">
-                <h1>Lunch Menu</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                     Repudiandae optio, repellat sint 
-                     eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
+                     <button>Learn more</button>
+                <button>Check out</button>
             </div>
         </div>
     </section>
