--- a/Project 5(Extend Illustration)/index.html
+++ b/Project 5(Extend Illustration)/index.html
@@ -15,37 +15,45 @@
     </header>
     <section>
         <div class="cartmaon">
-            <div class="card1">
+            <div class="card card1">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
-                <button>Learn more</button>
-                <button>Check out</button>
+                     <div class="but">
+                        <button>Learn more</button>
+                   <button>Check out</button>
+               </div>
                     </div>
-            <div class="card2">
+            <div class="card card2">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
-                     <button>Learn more</button>
-                <button>Check out</button>
+                     <div class="but">
+                        <button>Learn more</button>
+                   <button>Check out</button>
+               </div>
             </div>
-            <div class="card3">
+            <div class="card card3">
                 <h1>Lunch Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
-                     <button>Learn more</button>
-                <button>Check out</button>
+                     <div class="but">
+                        <button>Learn more</button>
+                   <button>Check out</button>
+               </div>
             </div>
-            <div class="card4">
+            <div class="card card4">
                 <h1>Breakfast Menu</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                      Repudiandae optio, repellat sint 
                      eaque fugiat quae molestiae animi corrupti ullam?lorem15</p>
+                     <div class="but">
                      <button>Learn more</button>
                 <button>Check out</button>
+            </div>
             </div>
         </div>
     </section>
