--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -13,5 +13,16 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="container">
+        <ul>
+          <a href="#">Home</a
+          ><a href="#">About</a
+          ><a href="#">Projects</a
+          ><a href="#">Contact</a>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
