--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -14,15 +14,33 @@
     />
   </head>
   <body>
-    <nav>
-      <div class="container">
+    <div class="container">
+      <nav>
         <ul>
-          <a href="#">Home</a
-          ><a href="#">About</a
-          ><a href="#">Projects</a
-          ><a href="#">Contact</a>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Blog</a></li>
         </ul>
+      </nav>
+
+      <div class="frame-container">
+        <div class="gradient"></div>
+        <header>
+          <section class="social">
+            <div class="line"></div>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <div class="line"></div>
+          </section>
+
+          <h1>
+            JISHNU <br />
+            MOHAN
+          </h1>
+        </header>
       </div>
-    </nav>
+    </div>
   </body>
 </html>
