--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -42,5 +42,21 @@
         </header>
       </div>
     </div>
+    <section class="about">
+      <p>
+        Jishnu Is a <span>Software</span> Engineer, and also a UI/UX lover he
+        has worked with lots of popular & unpopular technologies, frameworks,
+        and libraries such as React, Angular, Vue, and countless other
+      </p>
+      <p class="two">
+        Not only <span>Frameworks</span> and libraries but also different
+        programming languages like Python, JavaScript, Golang, TypeScript, Java,
+        C, C++, etc.
+      </p>
+      <p>
+        He is also known as <span>HuXn WebDev</span> on YouTube where he shares
+        all of his knowledge with the world totally for free.
+      </p>
+    </section>
   </body>
 </html>
