--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -54,8 +54,8 @@
         C, C++, etc.
       </p>
       <p>
-        He is also known as <span>HuXn WebDev</span> on YouTube where he shares
-        all of his knowledge with the world totally for free.
+        He is also known as <span>Jishnu WebDev</span> on YouTube where he
+        shares all of his knowledge with the world totally for free.
       </p>
     </section>
   </body>
