--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -58,5 +58,17 @@
         shares all of his knowledge with the world totally for free.
       </p>
     </section>
+    <!--Project area starts-->
+    <section class="project">
+      <div class="label">
+        <h1>
+          OUR <br />
+          PRO<span>JECTS</span>
+        </h1>
+        <div class="img-cont">
+          <img src="" class="i1" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
