--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -60,13 +60,22 @@
     </section>
     <!--Project area starts-->
     <section class="project">
-      <div class="label">
+      <div class="title">
         <h1>
           OUR <br />
           PRO<span>JECTS</span>
         </h1>
         <div class="img-cont">
-          <img src="" class="i1" />
+          <img src="Images/projects/1.png" class="i1" />
+          <img src="Images/projects/2.png" class="i2" />
+          <img src="Images/projects/3.png" class="i3" />
+          <img src="Images/projects/4.png" class="i4" />
+        </div>
+        <div class="img-cont">
+          <img src="Images/projects/5.png" class="i5" />
+          <img src="Images/projects/6.png" class="i6" />
+          <img src="Images/projects/7.png" class="i7" />
+          <img src="Images/projects/8.png" class="i8" />
         </div>
       </div>
     </section>
