--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -79,5 +79,63 @@
         </div>
       </div>
     </section>
+    <section class="client">
+      <div class="title">
+        <h1>CLI<span>ENTS</span></h1>
+      </div>
+      <div class="clients">
+        <div class="card-cont">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ea,
+            voluptates ipsa ducimus laudantium voluptate?Lorem ipsum d Lorem
+            ipsum dolor sit, amet consectetur adipisicing elit. Vero ab unde
+            aspernatur veritatis. Unde, dignissimos.olor sit amet consectetur
+            adipisicing elit. Harum veniam recusandae assumenda deleniti ullam
+            libero.
+          </p>
+          <div class="info">
+            <div class="img img1"></div>
+            <div class="user">
+              <p>Chacko</p>
+              <p>@chacko</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-cont">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ea,
+            voluptates ipsa ducimus laudantium voluptate?Lorem ipsum d Lorem
+            ipsum dolor sit, amet consectetur adipisicing elit. Vero ab unde
+            aspernatur veritatis. Unde, dignissimos.olor sit amet consectetur
+            adipisicing elit. Harum veniam recusandae assumenda deleniti ullam
+            libero.
+          </p>
+          <div class="info">
+            <div class="img img2"></div>
+            <div class="user">
+              <p>Unni</p>
+              <p>@unni</p>
+            </div>
+          </div>
+        </div>
+        <div class="card-cont">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ea,
+            voluptates ipsa ducimus laudantium voluptate?Lorem ipsum d Lorem
+            ipsum dolor sit, amet consectetur adipisicing elit. Vero ab unde
+            aspernatur veritatis. Unde, dignissimos.olor sit amet consectetur
+            adipisicing elit. Harum veniam recusandae assumenda deleniti ullam
+            libero.
+          </p>
+          <div class="info">
+            <div class="img img3"></div>
+            <div class="user">
+              <p>Babu</p>
+              <p>@babu</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
