--- a/Project 6(Portfolio Template)/index.html
+++ b/Project 6(Portfolio Template)/index.html
@@ -81,7 +81,10 @@
     </section>
     <section class="client">
       <div class="title">
-        <h1>CLI<span>ENTS</span></h1>
+        <h1>
+          OUR <br />
+          CLIE<span>NTS</span>
+        </h1>
       </div>
       <div class="clients">
         <div class="card-cont">
@@ -137,5 +140,36 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="logo-container">
+        <h1>Portfolio</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quae.
+          Dolor officiis dolorem consectetur unde ipsam magni nulla, quidem
+          perspiciatis. At error similique cum.
+        </p>
+      </div>
+
+      <div class="about-company">
+        <div class="footer-container">
+          <h1>About</h1>
+          <p>News & Blogs</p>
+          <p>Features</p>
+          <p>About Us</p>
+        </div>
+        <div class="footer-container">
+          <h1>Company</h1>
+          <p>How We Work?</p>
+          <p>Capital</p>
+          <p>Security</p>
+        </div>
+        <div class="footer-container">
+          <h1>Support</h1>
+          <p>FAQs</p>
+          <p>Contact Us</p>
+          <p>Security</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
